Cycles through to end of game
Co-authored by: Serena <serena.peruzzo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head></head>
     <meta charset="UTF-8">
-    <title>RC social interactions</title>
+    <title>Conway's game of life</title>
 </head>
 <body>
     <script src="game-of-life.js"></script>
